    посад место под электролит на цепь 3.3в
    диод в цепь между cp2102 и общим 3v3

_________________________________________________________________________________________
=========================================================================================
version 0.4.0 (xx.xx.2021)
------------------------
замена millis на rtc_time_get
    дополнительно функция iter() - возвращает количество пройденных итераций
    поле tm.cs - в количествах итераций (было в сотых секунды)
вместо loop используем setup с уходом в deep sleep на 100мс

_________________________________________________________________________________________
=========================================================================================
version 0.3.4 (20.08.2021)
------------------------
- доработки под большой экран и hwver.4
-    пины экрана
-    меню
-    экраны высотника

- экраны высотника
-    убрать "только жпс"
-    убрать часы

_________________________________________________________________________________________
=========================================================================================
version 0.3.3 (20.07.2021)
------------------------
- altcalc - увеличение времени усреднения (для чуть большей стабильности скоростей на отделении)
- увеличение размера пребуфера трека

_________________________________________________________________________________________
=========================================================================================
version 0.3.2 (12.06.2021)
------------------------
- в прыжке переход от ff до cnp при 15-20м/с, при этом скорость должна продержаться более 5-7 сек
-    (иногда бывает после отделения попадания в затенение и там возникает полка
-    в графике высот, но потом резкая просадка графика вниз)
-    в этом случае высоту открытия считать на эти 5-7 сек раньше, чем принятие решения
- altcalc
-    переход на ff при более высокой скорости