@@ -57,6 +57,14 @@ ________________________________________________________________________________
 version 0.4.0 (xx.xx.2021)
 ------------------------
 замена millis на rtc_time_get
+-    функции по работе с rtc-таймером у esp32
+-    логи
+-    интервал синхронизации часов - вместо разницы в millis() - используем количество итераций
+-    логбук и треки
+-    ubloxproto - там millis() нужен только для определения таймаута ожидания подтверждения команд
+-    gps/proc
+-        своя обработка таймаута подтверждения команд через подсчёт итераций
+-        таймаут приёма данных - через подсчёт итераций
     дополнительно функция iter() - возвращает количество пройденных итераций
     поле tm.cs - в количествах итераций (было в сотых секунды)
 вместо loop используем setup с уходом в deep sleep на 100мс
